--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "npm run clean && rollup -c",
     "clean": "rimraf dist",
+    "coverage": "rimraf coverage && c8 -r html -r text npm run test:unit",
     "lint": "eslint . && prettier . --check",
     "lint:fix": "eslint . --fix && prettier . --write",
     "test:unit": "mocha test/unit/**/*.spec.ts"
@@ -30,6 +31,7 @@
     "@types/mocha": "^10.0.1",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
+    "c8": "^7.12.0",
     "camelcase": "^7.0.0",
     "chai": "^4.3.7",
     "eslint": "^8.29.0",
@@ -38,7 +40,9 @@
     "prettier": "^2.8.1",
     "rimraf": "^3.0.2",
     "rollup": "^2.79.1",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-vue": "^6.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "vue": "^3.2.45"
